--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="clock.css">
     <link rel="icon" type="image/x-icon" href="l2.png">
-    <title>Cyscom</title>
+    <title>Lug Team</title>
 </head>
 
 <body class="webpage">
@@ -63,7 +63,7 @@
     </div>
 
     <div>
-        <h1 class="text">CYSCOM</h1>
+        <h1 class="text">Congratulations Team</h1>
     </div>
         
     
